Add unit tests for various components
- Introduced FclFunctionOriginTest to validate runtime and imported package function distinctions.
- Created UsernamePolicyTest to ensure username normalization and rejection of invalid formats.
- Added VfsFileLimitsTest to verify file size limits in the VFS.
- Implemented BaselineSql to load baseline SQL modules for migrations.
- Developed TerminalExportCaptureMigrationTest to check SQL generation for terminal export capture.
- Created JdbcSchedulerRepositoryTest to validate separation of normal and interrupted claims in the database.
- Added SchedulerServiceTest to ensure idle workers do not repeatedly claim until notified and handle interrupts correctly.
- Introduced PasswordPromptTest to validate password prompt rendering and buffer management.
- Created TerminalOperationScriptTest to ensure terminal commands are commented out in FCL scripts.
- Developed TerminalServerTest to validate independent authenticated connections without server interruption.